# DuoHash

./: CMakeLists.txt  makefile
.github/workflows/: bench.yaml
example/: benchmark.cpp
include/: DuoHash.h
include/Hash/: MultiHashFunction.h
